# librocco

./: .coderabbit.yaml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .lintstagedrc.json  1. Modified the filter in `mapAvailableWarehousesToOptions` to include the currently selected warehouse even if it has zero remaining stock  2. Updated the comment to reflect this change  AGENTS.md  I also updated the comment above the options declaration to better reflect what we're doing  LOCKED_DEPS.md  NOTES.md  PROMPT_1.md  PROMPT_2.md  PROMPT_3.md  PROPOSAL_1.md  PROPOSAL_2.md  README.md  TASK.md  TODOS.md  build_vlcn.sh  migration-discussion.md  migration-plan.md  rush.json
.devcontainer/: .dockerignore  Dockerfile  README.md  devcontainer.json  init-workspace.sh
.github/: build-workflows.sh  pull_request_template.md
assets/: icon.icns
ci-debug-artifacts/: README.md
docs/: ci-llm.md  developer-workflow-artefacts.md  vendor-registry-migration.md
python-apps/launcher/: .gitignore  CLAUDE.md  I18N.md  MacOS-quirks.md  README.md  app  babel.cfg  librocco-launcher.spec  librocco.desktop  librocco.spec  main.py  main_headless.py  pyproject.toml  remove-test-certs.sh
python-apps/launcher/launcher/: __init__.py  binary_manager.py  config.py  daemon_manager.py  error_handler.py  i18n.py  icon_manager.py  log_viewer.py  logging_config.py  network_utils.py  startup.py  tray_app.py
python-apps/launcher/launcher/locales/: launcher.pot
python-apps/launcher/launcher/locales/de/LC_MESSAGES/: launcher.mo  launcher.po
python-apps/launcher/launcher/locales/en/LC_MESSAGES/: launcher.mo  launcher.po
python-apps/launcher/launcher/locales/it/LC_MESSAGES/: launcher.mo  launcher.po
python-apps/launcher/scripts/: build_appimage.sh  build_executable.py  create_icon.py  download_caddy_for_build.py  download_node_for_build.py  package_syncserver_for_build.py
python-apps/launcher/tests/: conftest.py  test_caddy_binary.py  test_circus_daemon.py  test_integration.py  test_network_utils.py  test_platform_compatibility.py
scripts/: .eslintrc.js  README.md  artefacts-download.sh  artefacts-upload.sh  build_devcontainer.sh  build_vlcn.sh  check-pr.sh  commit-artefacts.sh  compare_artefacts_version.sh  compute_artefacts_version.sh  package.json  (+14 more)
(+1771 files in other folders)
