[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "launcher"
version = "0.1.0"
description = "Cross-platform system tray application using PyQt6"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt6>=6.10.0",
    "circus>=0.18.0",
    "platformdirs>=4.0.0",
    "requests>=2.31.0",
    "psutil>=6.0.0",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools]
packages = ["launcher"]
